[package]
name = "shazam"
version = "0.1.0"
authors = ["Caden Henrich <cadenhenrich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.3.0", features = ["full"] }
